--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,29 +26,22 @@ jobs:
 
      - name: Push Docker image to Docker Hub
        run: |
+         docker tag  backend_service.api:latest menoitami/backend_service.api:latest
          docker push menoitami/api_podpisant:latest
 
   deploy:
     runs-on: ubuntu-latest
-    # needs: build
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
+      - name: Deploy
+        uses: appleboy/ssh-action@master
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Deploy via SSH
-        env:
-          HOST: ${{ secrets.HOST_IP }}
-          USER: ${{ secrets.USER_NAME }}
-        run: |
-          ssh -o StrictHostKeyChecking=no $USER@$HOST << 'EOF'
-            cd 
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.HOST_IP }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            cd podpisant
             git pull
             docker-compose down
             docker-compose up --build -d
-          EOF
