--- a/app/conf.d/app.conf
+++ b/app/conf.d/app.conf
@@ -4,7 +4,7 @@ upstream backend {
 
 server {
     listen 80;
-    server_name menoitami.ru www.menoitami.ru;
+    server_name menoitami.ru;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -17,50 +17,39 @@ server {
 
 server {
     listen 443 ssl;
-    server_name menoitami.ru www.menoitami.ru;
+    server_name menoitami.ru;
 
     ssl_certificate /etc/letsencrypt/live/menoitami.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/menoitami.ru/privkey.pem;
 
-    # SSL-настройки
-    ssl_session_cache shared:le_nginx_SSL:10m;
-    ssl_session_timeout 1440m;
-    ssl_session_tickets off;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
-
-    # Закомментируйте или создайте файл:
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
     include /etc/letsencrypt/options-ssl-nginx.conf;
-
-    # Заголовки безопасности
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
 
     location / {
         proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
+
+        # Критически важные заголовки для проксирования
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
+
+        # Для авторизации
         proxy_set_header Authorization "Bearer $cookie_access_token";
+
+        # Безопасность и обработка редиректов
         proxy_redirect off;
         proxy_buffering off;
+
+        # Таймауты
         proxy_connect_timeout 60s;
         proxy_read_timeout 60s;
         proxy_send_timeout 60s;
 
-        # WebSocket
+        # Дополнительные настройки для WebSocket
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         rewrite ^(/[^/]+)$ $1/ break;
