--- a/.env-prod
+++ b/.env-prod
@@ -1,8 +1,13 @@
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DB_NAME=podpisant
+DB_NAME=postgres
 DB_USER=postgres
 DB_PASS=postgres
+
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
 
 REDIS_HOST=redis
 REDIS_PORT=6379
