--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ DB_HOST=83.222.17.20
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=aecthiop1d234moy89
 
-REDIS_HOST=redis
+REDIS_HOST=83.222.17.20
 REDIS_PORT=6379
 
 DEBUG=false
