--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "pyjwt==2.10.1",
     "nats-py==2.10.0",
-    "cryptography==44.0.0"
+    "cryptography==44.0.0",
+    "colorlog>=6.9.0"
 ]
 
 [project.optional-dependencies]
