--- a/.env
+++ b/.env
@@ -22,3 +22,5 @@ EMAIL_CONFIRMATION_SUB=email.confirmation
 EMAIL_CODE_SUB=email.auth_code
 
 DEBUG=true
+
+CRYPT_KEY=aRU/WBqyzXvNHHcvGH7rNlQXjyhhZDMRYjj6ntpArtI=
