--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ REDIS_HOST=83.222.17.20
 REDIS_PORT=6379
 
 DEBUG=false
-API_ADMIN_EMAILS=zhora.zhilin.06@mail.ru,stassinelnikov6@gmail.com,babakapa729@gmail.com
+API_ADMIN_EMAILS=zhora.zhilin.06@mail.ru,stassinelnikov6@gmail.com,babakapa729@gmail.com,danil17092006@gmail.com
 
 MINIO_ENDPOINT_URL=minio:9000
 MINIO_PUBLIC_URL=localhost
