--- a/.env-prod
+++ b/.env-prod
@@ -13,7 +13,7 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 
 DEBUG=false
-API_ADMIN_EMAILS=zhora.zhilin.06@mail.ru,stassinelnikov6@gmail.com,babakapa729@gmail.com
+API_ADMIN_EMAILS=zhora.zhilin.06@mail.ru,stassinelnikov6@gmail.com,babakapa729@gmail.com,danil17092006@gmail.com
 
 MINIO_ENDPOINT_URL=minio:9000
 MINIO_PUBLIC_URL=localhost
