minio doc upload

--- a/.env-prod
+++ b/.env-prod
@@ -15,11 +15,13 @@ REDIS_PORT=6379
 DEBUG=false
 API_ADMIN_EMAILS=zhora.zhilin.06@mail.ru,stassinelnikov6@gmail.com,babakapa729@gmail.com,danil17092006@gmail.com
 
-MINIO_ENDPOINT_URL=minio:9000
-MINIO_PUBLIC_URL=localhost
-MINIO_ACCESS_KEY=minio-key
-MINIO_SECRET_KEY=17471747
-MINIO_USER_AVATAR_BUCKET_NAME=avatars
+MINIO_ENDPOINT=minio:9000
+MINIO_PUBLIC_URL=http://localhost:9000
+MINIO_ACCESS_KEY=minioadmin  # Стандартный логин для MinIO
+MINIO_SECRET_KEY=minioadmin  # Стандартный пароль для MinIO
+MINIO_ALIAS=myminio
+DOCUMENTS_BUCKET_NAME=documents
+MINIO_SECURE=False
 
 NATS_URL=nats://nats:4222
 NATS_WEBSOCKET=false
