--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,43 +90,47 @@ services:
       - .env-prod
     command: [ "sh", "/podpisant.api/docker/migrate.sh" ]
 
-#  minio:
-#    image: minio/minio
-#    container_name: minio
-#    ports:
-#      - "9000:9000"
-#      - "9001:9001"
-#    environment:
-#      MINIO_ROOT_USER: minio-key
-#      MINIO_ROOT_PASSWORD: 17471747
-#      MINIO_SERVER_URL: http://minio.example.com:9000
-#    volumes:
-#      - ./minio-data:/data
-#      - ./minio-config:/root/.minio
-#    command: server /data --console-address ":9001"
-#    restart: always
-#    extra_hosts:
-#      - "minio.example.com:127.0.0.1"
-#
-#  mc:
-#    profiles: [ "setup" ]
-#    image: minio/mc
-#    depends_on:
-#      - minio
-#    environment:
-#      - MINIO_ALIAS=myminio
-#      - MINIO_URL=http://minio:9000
-#      - MINIO_ACCESS_KEY=minio-key
-#      - MINIO_SECRET_KEY=17471747
-#      - BUCKET_NAME=avatars
-##     mc policy set private $${MINIO_ALIAS}/$${BUCKET_NAME}
-#    entrypoint: >
-#      /bin/sh -c "
-#      sleep 10;
-#      mc alias set $${MINIO_ALIAS} $${MINIO_URL} $${MINIO_ACCESS_KEY} $${MINIO_SECRET_KEY};
-#      mc mb $${MINIO_ALIAS}/$${BUCKET_NAME} || true;
-#      mc policy set public $${MINIO_ALIAS}/$${BUCKET_NAME}
-#      "
+  minio:
+    image: minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - ./minio-data:/data
+      - ./minio-config:/root/.minio
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    restart: always
+
+  mc:
+    image: minio/mc
+    depends_on:
+      minio:
+        condition: service_healthy
+    environment:
+      - MINIO_ALIAS=myminio
+      - MINIO_ENDPOINT=http://minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - DOCUMENTS_BUCKET_NAME=documents
+    entrypoint: >
+      /bin/sh -c "
+      until mc config host add $${MINIO_ALIAS} $${MINIO_ENDPOINT} $${MINIO_ACCESS_KEY} $${MINIO_SECRET_KEY}; do
+        echo 'Waiting for MinIO to be ready...';
+        sleep 5;
+      done;
+      mc mb $${MINIO_ALIAS}/$${DOCUMENTS_BUCKET_NAME} || true;
+      mc policy set public $${MINIO_ALIAS}/$${DOCUMENTS_BUCKET_NAME};
+      echo 'MinIO configuration completed';
+      "
 
   nginx:
     image: nginx:latest
