--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "pyjwt==2.10.1",
     "nats-py==2.10.0",
     "cryptography==44.0.0",
-    "colorlog>=6.9.0"
+    "colorlog>=6.9.0",
+    "python-multipart==0.0.20",
+    "minio==7.2.15"
 ]
 
 [project.optional-dependencies]
