minio doc upload

--- a/.env-prod
+++ b/.env-prod
@@ -22,6 +22,7 @@ MINIO_SECRET_KEY=minioadmin  # Стандартный пароль для MinIO
 MINIO_ALIAS=myminio
 DOCUMENTS_BUCKET_NAME=documents
 MINIO_SECURE=False
+MINIO_PUBLIC_URL=https://menoitami/api
 
 NATS_URL=nats://nats:4222
 NATS_WEBSOCKET=false
