--- a/.env
+++ b/.env
@@ -12,11 +12,12 @@ API_ADMIN_EMAILS=zhora.zhilin.06@mail.ru,stassinelnikov6@gmail.com,babakapa729@g
 
 MINIO_ENDPOINT=minio:9000
 MINIO_PUBLIC_URL=http://localhost:9000
-MINIO_ACCESS_KEY=minioadmin  # Стандартный логин для MinIO
-MINIO_SECRET_KEY=minioadmin  # Стандартный пароль для MinIO
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
 MINIO_ALIAS=myminio
 DOCUMENTS_BUCKET_NAME=documents
 MINIO_SECURE=False
+MINIO_PUBLIC_URL=https://menoitami/api
 
 NATS_URL=nats://nats:4222
 NATS_WEBSOCKET=false
