--- a/app/conf.d/app.conf
+++ b/app/conf.d/app.conf
@@ -25,6 +25,26 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
 
     location / {
+        # Динамически разрешаем только определённые Origin (включая localhost)
+        if ($http_origin ~* (https?://(localhost|127\.0\.0\.1|menoitami\.ru)(:\d+)?$)) {
+            set $cors_origin $http_origin;
+        }
+
+        # Критические CORS-заголовки
+        add_header 'Access-Control-Allow-Origin' $cors_origin always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With, Origin, Accept' always;
+
+        # Обработка предварительных OPTIONS-запросов
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        # Проксирование на бэкенд
         proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
@@ -52,6 +72,7 @@ server {
         # Дополнительные настройки для WebSocket
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
         rewrite ^(/[^/]+)$ $1/ break;
     }
 }
