--- a/backend/tg_notify/pyproject.toml
+++ b/backend/tg_notify/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "redis>=5.2.0,<6.0.0",
     "python-dotenv>=1.1.0",
     "nats-py==2.10.0",
+    "aiogram==3.19.0"
 ]
 
 [project.optional-dependencies]
