--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,7 +153,11 @@ services:
       - redis
 #      - certbot
 
-
+  frontend:
+    build:
+      context: frontend
+    volumes:
+      - ./build:/app/dist
 
 #  certbot:
 #    image: certbot/certbot
