--- a/app/conf.d/app.conf
+++ b/app/conf.d/app.conf
@@ -25,6 +25,15 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
 
     location / {
+        root /var/www/build;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location ~ /(staticfiles|media) {
+        root /var/www/;
+    }
+
+    location ~ /(api|docs|openapi.json) {
         proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
