--- a/app/conf.d/app.conf
+++ b/app/conf.d/app.conf
@@ -1,4 +1,4 @@
-upstream backend {
+upstream api_backend {
     server api:8000;
 }
 
@@ -34,32 +34,31 @@ server {
     }
 
     location ~ /(api|docs|openapi.json) {
-        proxy_pass http://backend;
+        proxy_pass http://api_backend;
         proxy_http_version 1.1;
-        proxy_set_header Connection "";
-
-        # Критически важные заголовки для проксирования
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
 
-        # Для авторизации
-        proxy_set_header Authorization "Bearer $cookie_access_token";
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
 
-        # Безопасность и обработка редиректов
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
         proxy_redirect off;
         proxy_buffering off;
-
-        # Таймауты
-        proxy_connect_timeout 60s;
-        proxy_read_timeout 60s;
-        proxy_send_timeout 60s;
-
-        # Дополнительные настройки для WebSocket
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_read_timeout 300s;
     }
 }
