--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,6 +139,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ./build:/var/www/build
+      - ./backend/static:/var/www/static
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./app/conf.d:/etc/nginx/conf.d
       - ./certbot/conf:/etc/letsencrypt
