--- a/app/conf.d/app.conf
+++ b/app/conf.d/app.conf
@@ -27,10 +27,32 @@ server {
     location / {
         root /var/www/build;
         try_files $uri $uri/ /index.html;
+
+        # Добавьте эти строки для правильных MIME-типов
+        types {
+            text/css css;
+            application/javascript js;
+            text/html html;
+            image/svg+xml svg;
+        }
+
+        # Отключайте nosniff только если уверены в безопасности
+        add_header X-Content-Type-Options "";
     }
 
-    location ~ /(staticfiles|media) {
-        root /var/www/;
+    location ~ /assets/ {
+        root /var/www/build;
+        try_files $uri =404;
+
+        # Явно указываем MIME-типы для assets
+        types {
+            text/css css;
+            application/javascript js;
+        }
+
+        # Кэширование статики
+        expires 1y;
+        add_header Cache-Control "public";
     }
 
     location ~ /(api|docs|openapi.json) {
